Update issue templates
기능 추가 템플릿

--- a/.github/ISSUE_TEMPLATE/-----.md
+++ b/.github/ISSUE_TEMPLATE/-----.md
@@ -1,5 +1,5 @@
 ---
-name: 버그 보고
+name: 기능 추가
 about: 상세 명세서
 title: ''
 labels: ''
@@ -7,15 +7,8 @@ assignees: ''
 
 ---
 
-## 발생 빈도
-(e.g. 항상, 자주, 간헐적)
+## 요구 사항
 
-## 현상
-(필수 입력)
+## 상세 설명
 
-## 기대 결과
-(필수 입력)
-
-## 재현 스탭
-1. (필수 입력)
-2. ...
+## 참고
