Update issue templates
기능 개선 템플릿

--- a/.github/ISSUE_TEMPLATE/-----.md
+++ b/.github/ISSUE_TEMPLATE/-----.md
@@ -1,5 +1,5 @@
 ---
-name: 기능 추가
+name: 기능 개선
 about: 상세 명세서
 title: ''
 labels: ''
@@ -7,7 +7,9 @@ assignees: ''
 
 ---
 
-## 요구 사항
+## AS-IS
+
+## TO-BE
 
 ## 상세 설명
 
